--- a/MovePigMove.Core/MovePigMove.Core.csproj
+++ b/MovePigMove.Core/MovePigMove.Core.csproj
@@ -101,6 +101,7 @@
     <Compile Include="CommandHandlers\AddExerciseCommandHandler.cs" />
     <Compile Include="CommandHandlers\AddStrengthCommandHandler.cs" />
     <Compile Include="CommandHandlers\BootstrapCommandHandler.cs" />
+    <Compile Include="CommandHandlers\CreateUserProfileCommand.cs" />
     <Compile Include="CommandHandlers\EndWorkoutCommandHandler.cs" />
     <Compile Include="Commands\AddCardioCommand.cs" />
     <Compile Include="Commands\AddStrengthCommand.cs" />
@@ -112,15 +113,16 @@
     <Compile Include="CommandHandlers\UpdateExerciseCommandHandler.cs" />
     <Compile Include="Commands\AddExerciseCommand.cs" />
     <Compile Include="Commands\UpdateExerciseCommand.cs" />
-    <Compile Include="Documents\DocumentId.cs" />
     <Compile Include="Documents\ExerciseDocument.cs" />
     <Compile Include="Documents\IdUtil.cs" />
+    <Compile Include="Documents\UserProfileDocument.cs" />
     <Compile Include="Documents\WorkoutDocument.cs" />
     <Compile Include="Entities\CardioSegment.cs" />
     <Compile Include="Entities\IDomainEntity.cs" />
     <Compile Include="Entities\Exercise.cs" />
     <Compile Include="Entities\ExerciseType.cs" />
     <Compile Include="Entities\StrengthSegment.cs" />
+    <Compile Include="Entities\UserProfile.cs" />
     <Compile Include="Entities\Workout.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IViewFactory.cs" />
@@ -129,6 +131,7 @@
     <Compile Include="Storage\BaseRepository.cs" />
     <Compile Include="Storage\IExerciseRepository.cs" />
     <Compile Include="Storage\IRepository.cs" />
+    <Compile Include="Storage\IUserProfileRepository.cs" />
     <Compile Include="Storage\IWorkoutRepository.cs" />
     <Compile Include="StructureMap\ApplicationRegistry.cs" />
     <Compile Include="StructureMap\Conventions\RegisterFirstInstanceOfInterface.cs" />
