--- a/MovePigMove.Web/MovePigMove.Web.csproj
+++ b/MovePigMove.Web/MovePigMove.Web.csproj
@@ -168,11 +168,11 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AccountOriginalController.cs" />
     <Compile Include="Controllers\AddController.cs" />
+    <Compile Include="Controllers\AuthenticationService.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ExercisesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MembershipException.cs" />
-    <Compile Include="Controllers\PiggyProvider.cs" />
     <Compile Include="Controllers\WorkoutController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -240,6 +240,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="NLog.config" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
@@ -313,6 +314,7 @@
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
     <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
     <Content Include="Views\Account\Manage.cshtml" />
+    <Content Include="Views\Account\_RemoveExternalLoginsPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
