--- a/MovePigMove.Web/Web.config
+++ b/MovePigMove.Web/Web.config
@@ -17,6 +17,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="enableSimpleMembership" value="false"/>
+    <add key="autoFormsAuthentication" value="false"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
@@ -34,6 +36,12 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <membership defaultProvider="PiggyProvider">
+      <providers>
+        <clear/>
+        <add name="PiggyProvider" type="MovePigMove.Web.Controllers.PiggyProvider"  />
+      </providers>
+    </membership>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
