workout summary on all pages at the bottom

--- a/MovePigMove.Core/MovePigMove.Core.csproj
+++ b/MovePigMove.Core/MovePigMove.Core.csproj
@@ -126,20 +126,28 @@
     <Compile Include="Entities\Workout.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IViewFactory.cs" />
+    <Compile Include="IWorkoutService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\OpenWorkoutQuery.cs" />
+    <Compile Include="Queries\PreviousWorkoutsQuery.cs" />
     <Compile Include="Storage\BaseRepository.cs" />
+    <Compile Include="Queries\ExerciseTypeQuery.cs" />
+    <Compile Include="Queries\ExerciseWithNoNameQuery.cs" />
     <Compile Include="Storage\IExerciseRepository.cs" />
     <Compile Include="Storage\IRepository.cs" />
     <Compile Include="Storage\IWorkoutRepository.cs" />
+    <Compile Include="Queries\Query.cs" />
     <Compile Include="StructureMap\ApplicationRegistry.cs" />
     <Compile Include="StructureMap\Conventions\RegisterFirstInstanceOfInterface.cs" />
     <Compile Include="StructureMap\Conventions\RegisterGenericTypesOfInterface.cs" />
     <Compile Include="StructureMap\StructureMapControllerFactory.cs" />
+    <Compile Include="UserIdProvider.cs" />
     <Compile Include="ViewModels\AddExerciseInputModel.cs" />
+    <Compile Include="ViewModels\ExerciseByTypeViewFactory.cs" />
     <Compile Include="ViewModels\ExerciseListViewFactory.cs" />
     <Compile Include="ViewModels\ExerciseListViewModel.cs" />
     <Compile Include="ViewModels\IViewRepository.cs" />
+    <Compile Include="ViewModels\UserWorkoutSummary.cs" />
     <Compile Include="ViewModels\ViewRepository.cs" />
     <Compile Include="ViewModels\WorkoutSummaryViewFactory.cs" />
     <Compile Include="ViewModels\WorkoutSummaryViewModel.cs" />
