--- a/MovePigMove.Web/MovePigMove.Web.csproj
+++ b/MovePigMove.Web/MovePigMove.Web.csproj
@@ -309,6 +309,7 @@
     <Content Include="Views\Workout\Index.cshtml" />
     <Content Include="Views\Workout\PromptForNew.cshtml" />
     <Content Include="Views\Workout\Summary.cshtml" />
+    <Content Include="Views\Workout\_Summary.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
